Created feature products and category list

--- a/frontent/src/index.css
+++ b/frontent/src/index.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@font-face{
+    font-family: "RubikVinyl";
+    src:local("RubikVinyl-Regular"),
+    url('./assets/fonts/RubikVinyl-Regular.ttf') 
+  }
