--- a/backend/templates/email/newsletter.html
+++ b/backend/templates/email/newsletter.html
@@ -28,17 +28,13 @@
             background-color: #ff7f3f;
             color: #ffffff;
             text-align: center;
-            padding: 20px;
+            padding: 5px;
             font-size: 24px;
             font-weight: bold;
-            display: flex;
-            align-items: center;
-            gap:20px;
-        
         }
         .email-header img{
-            width: 30px;
-            height: 30px;
+            width: 70px;
+            height: 70px;
         }
 
         /* Content styles */
@@ -81,7 +77,7 @@
             <!-- Footer -->
             <div class="email-footer">
                 <p>If you have any questions, visit our <a
-                        href="https://yourwebsite.com/help">Help Center</a>.</p>
+                        href="{{help_url}}">Help Center</a>.</p>
                 <p>© 2025 Ride Future. All rights reserved.</p>
             </div>
         </div>
