--- a/backend/templates/email/tempPassword.html
+++ b/backend/templates/email/tempPassword.html
@@ -28,9 +28,13 @@
             background-color: #ff7f3f;
             color: #ffffff;
             text-align: center;
-            padding: 20px;
+            padding: 5px;
             font-size: 24px;
             font-weight: bold;
+        }
+        .email-header img{
+            width: 70px;
+            height: 70px;
         }
 
         /* Content styles */
@@ -72,7 +76,8 @@
         <div class="email-container">
             <!-- Header -->
             <div class="email-header">
-                Ride Future
+                <img src="{{logo_url}}" alt="Ride Future Logo">
+                <h2>Ride Future</h2>
             </div>
 
             <!-- Content -->
@@ -96,7 +101,7 @@
             <!-- Footer -->
             <div class="email-footer">
                 <p>If you have any questions, visit our <a
-                        href="https://yourwebsite.com/help">Help Center</a>.</p>
+                        href="{{help_url}}">Help Center</a>.</p>
                 <p>© 2025 Ride Future. All rights reserved.</p>
             </div>
         </div>
